--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 macos/.DS_Store
 .DS_Store
+karabiner/assets/complex_modifications/1717265706.json
+karabiner/automatic_backups/karabiner_20240601.json
