--- a/linux/waybar/config
+++ b/linux/waybar/config
@@ -6,7 +6,9 @@
     "sway/window",
     "sway/mode"
   ],
-  "modules-center": ["clock"],
+  "modules-center": [
+    "clock"
+  ],
   "modules-right": [
     "cpu",
     "memory",
@@ -18,6 +20,7 @@
   "sway/window": {
     "max-length": 50
   },
+  "sway/workspaces": {},
   "tray": {
     "icon-size": 12,
     "spacing": 10
