--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,16 +1,9 @@
 # BEGIN_KITTY_THEME
-include current-theme.conf
-font_family Liga SFMono Nerd Font
-# font_family FiraCode Nerd Font
-# bold_font auto
+include themes/catppuccin-macchiato.conf
 
 draw_minimal_borders yes
 background_opacity 0.95
 background_blur 48
-
-font_size 13.0
-disable_ligatures never
-
 
 #tab bar
 tab_bar_background #24273A
@@ -18,7 +11,15 @@ tab_bar_edge top
 tab_bar_style powerline
 tab_powerline_style round
 
-# macos specific configuration
-include macos.conf
+# os config
+include os_configs/linux.conf
+# include mos_configs/macos.conf
+
+disable_ligatures never
+
+bold_font        auto
+italic_font      auto
+bold_italic_font auto
+
 
 # END_KITTY_THEME
