--- a/kitty/os_configs/macos.conf
+++ b/kitty/os_configs/macos.conf
@@ -2,10 +2,13 @@
 
 editor /opt/homebrew/bin/nvim
 
+background_opacity 0.80
+background_blur 32
+
 hide_window_decorations titlebar-only
 macos_show_window_title_in none
 macos_titlebar_color system
 macos_colorspace displayp3
 
-font_family Liga SFMono Nerd Font
+font_family FiraCode Nerd Font
 font_size 12.0
