--- a/kitty/os_configs/linux.conf
+++ b/kitty/os_configs/linux.conf
@@ -3,6 +3,9 @@ editor /opt/nvim-linux64/bin/nvim
 
 hide_window_decorations always
 
+background_opacity 0.95
+background_blur 0
+
 font_family FiraCode Nerd Font
 bold_font auto
 font_size 10.0
