--- a/kitty/os_configs/macos.conf
+++ b/kitty/os_configs/macos.conf
@@ -3,12 +3,15 @@
 editor /opt/homebrew/bin/nvim
 
 background_opacity 0.95
-background_blur 32
+background_blur 0
 
 hide_window_decorations titlebar-only
 macos_show_window_title_in none
 macos_titlebar_color system
 macos_colorspace displayp3
 
-font_family FiraCode Nerd Font
-font_size 12.0
+# sometimes kitty might not list the font with command kitty list-fonts
+# kitty --debug-font-fallback shows font used
+
+font_family CaskaydiaCove Nerd Font
+font_size 11.0
