--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,5 +1,6 @@
 # BEGIN_KITTY_THEME
-include themes/catppuccin-macchiato.conf
+# include themes/catppuccin-macchiato.conf
+include themes/gruvbox_dark_soft.conf
 
 draw_minimal_borders yes
 
