--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -11,8 +11,8 @@ tab_bar_style powerline
 tab_powerline_style round
 
 # os config
-# include os_configs/linux.conf
-include os_configs/macos.conf
+include os_configs/linux.conf
+# include os_configs/macos.conf
 
 disable_ligatures never
 
