--- a/linux/swaylock/config
+++ b/linux/swaylock/config
@@ -1,36 +1,36 @@
-image=/home/wchan/Pictures/cat-sound.png
+image=/home/wchan/Pictures/gruvbox-wallpapers/wallpapers/minimalistic/gruv-portal-cake.png
 font=FantasqueSansM Nerd Font Propo
-font-size=40
+font-size=18
 scaling=fill
-indicator-radius=200
-indicator-thickness=30
+indicator-radius=80
+indicator-thickness=15
 bs-hl-color=ffa066
 
-caps-lock-bs-hl-color=ffa066
-caps-lock-key-hl-color=957fbb
-inside-color=1f1f28
-inside-clear-color=1f1f28
-inside-caps-lock-color=1f1f28
-inside-ver-color=1f1f28
-inside-wrong-color=1f1f28
-key-hl-color=7fb4ca
-layout-bg-color=1f1f28
-layout-border-color=1f1f28
-layout-text-color=dcd7ba
-line-color=1f1f28
-line-clear-color=1f1f28
-line-caps-lock-color=1f1f28
-line-ver-color=1f1f28
-line-wrong-color=1f1f28
-ring-color=1f1f28
-ring-clear-color=ffa066
-ring-caps-lock-color=1f1f28
-ring-ver-color=98bb6c
-ring-wrong-color=1f1f28
+caps-lock-bs-hl-color=fe8019
+caps-lock-key-hl-color=d3869b
+inside-color=32302f
+inside-clear-color=32302f
+inside-caps-lock-color=32302f
+inside-ver-color=32302f
+inside-wrong-color=32302f
+key-hl-color=83a598
+layout-bg-color=32302f
+layout-border-color=32302f
+layout-text-color=ebdbb2
+line-color=32302f
+line-clear-color=32302f
+line-caps-lock-color=32302f
+line-ver-color=32302f
+line-wrong-color=32302f
+ring-color=32302f
+ring-clear-color=fe8019
+ring-caps-lock-color=32302f
+ring-ver-color=b8bb26
+ring-wrong-color=32302f
 separator-color=00000000
-text-color=dcd7ba
-text-clear-color=ffa066
-text-caps-lock-color=957fbb
-text-ver-color=dcd7ba
-text-wrong-color=f7768e
+text-color=ebdbb2
+text-clear-color=fe8019
+text-caps-lock-color=d3869b
+text-ver-color=ebdbb2
+text-wrong-color=fb4934
 
