--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -5,7 +5,7 @@ include themes/gruvbox_dark_soft.conf
 draw_minimal_borders yes
 
 #tab bar
-tab_bar_background #24273A
+# tab_bar_background #24273A
 tab_bar_edge top
 tab_bar_style powerline
 tab_powerline_style round
