update gruvbox_dark to have softer red for audio mute

--- a/kitty/themes/gruvbox_dark.conf
+++ b/kitty/themes/gruvbox_dark.conf
@@ -29,6 +29,7 @@ color8                  #7c6f64
 # red
 color1                  #cc241d
 color9                  #fb4934
+# for audio mute        #e57373
 
 #: green
 color2                  #98971a
