--- a/kitty/os_configs/linux.conf
+++ b/kitty/os_configs/linux.conf
@@ -4,9 +4,10 @@ editor /opt/nvim-linux64/bin/nvim
 hide_window_decorations always
 
 background_opacity 0.95
-background_blur 0
+background_blur 12
 
-font_family FiraCode Nerd Font
+# font_family FiraCode Nerd Font
+font_family CaskaydiaCove Nerd Font
 bold_font auto
 font_size 10.0
 
