--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,6 +1,9 @@
 # BEGIN_KITTY_THEME
 # include themes/catppuccin-macchiato.conf
-include themes/gruvbox_dark_soft.conf
+# include themes/gruvbox_dark_soft.conf
+include themes/OneDark-Pro.conf
+
+# include themes/OneDark.conf
 
 draw_minimal_borders yes
 
