oh-my-posh onedark and others

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -3,6 +3,8 @@
 # include themes/gruvbox_dark_soft.conf
 include themes/OneDark-Pro.conf
 
+# include themes/nord.conf
+
 # include themes/OneDark.conf
 
 draw_minimal_borders yes
