--- a/kitty/themes/OneDark-Pro.conf
+++ b/kitty/themes/OneDark-Pro.conf
@@ -54,8 +54,12 @@ color5  #C678DD
 color13 #DE73FF
 
 # cyan
-color6  #56B6C2
-color14 #4CD1E0
+color6   #88C0D0
+color14  #8FBCBB
+
+# cyan
+# color6  #56B6C2
+# color14 #4CD1E0
 
 # white
 color7  #D7DAE0
